📢 UPDATE: Fixed Connect (z-index)

--- a/src/components/Connect/Connect.sass
+++ b/src/components/Connect/Connect.sass
@@ -6,6 +6,7 @@ $layout-breakpoint-md: 768px
     width: 48px
     top: 80px
     list-style: none
+    z-index: 1
     &__item
         margin-top: 15px
         &:last-child
